Add HSC stellarity to HS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.4_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.4_Merging.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -93,7 +95,7 @@
    "outputs": [],
    "source": [
     "hsc =    Table.read(\"{}/HSC-SSP.fits\".format(TMP_DIR)   )[\"hsc_id\",      \"hsc_ra\",    \"hsc_dec\",\n",
-    "                                                          \"hsc_flag_gaia\"]\n",
+    "                                                          \"hsc_flag_gaia\", \"hsc_stellarity\"]\n",
     "#vhs =    Table.read(\"{}/VISTA-VHS.fits\".format(TMP_DIR) )[\"vhs_id\",      \"vhs_ra\",    \"vhs_dec\",    \n",
     "#                                                          \"vhs_stellarity\", \"vhs_flag_gaia\"]\n",
     "#vics82 = Table.read(\"{}/VICS82.fits\".format(TMP_DIR)    )[\"vics82_id\",   \"vics82_ra\", \"vics82_dec\", \n",
@@ -1314,7 +1316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
