Adding header data into SED files

--- a/dmu32/dmu32_seds_to_vo.ipynb
+++ b/dmu32/dmu32_seds_to_vo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -19,9 +19,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-06-27 17:34:31.287600\n"
+      "2018-07-09 17:58:08.576610\n"
      ]
     }
    ],
@@ -34,12 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
+    "from astropy.io import fits\n",
+    "from astropy.coordinates import SkyCoord\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "import re\n",
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -89,13 +94,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def cigale_to_vo(in_sed_name, out_folder):\n",
+    "def name_to_ra_dec(help_id):\n",
+    "    \"\"\"Take a HELP id and return the ra dec in deg\n",
+    "    \n",
+    "    parameters\n",
+    "    ----------\n",
+    "    \n",
+    "    help_id: string\n",
+    "       The help ID\n",
+    "       \n",
+    "    returns\n",
+    "    -------\n",
+    "    \n",
+    "    ra: flaot\n",
+    "       Right Ascension in degrees\n",
+    "       \n",
+    "    dec: float\n",
+    "        Declination in degrees\n",
+    "    \"\"\"\n",
+    "    ra, dec = 'HELP_J155631.108+545024.379'.strip('HELP_J').split('+')\n",
+    "    \n",
+    "    ra = ra[:2] + 'h' + ra[2:]\n",
+    "    ra = ra[:5] + 'm' + ra[5:]\n",
+    "    ra = ra + 's' \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    dec = dec[:2] + 'd' + dec[2:]\n",
+    "    dec = dec[:5] + 'm' + dec[5:]\n",
+    "    dec = dec + 's'\n",
+    "    \n",
+    "    coords = SkyCoord('{} +{}'.format(ra, dec))\n",
+    "    \n",
+    "    return coords.ra.value, coords.dec.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cigale_to_vo(in_sed_name, out_folder, help_id='None', ra=np.nan, dec=np.nan, z=np.nan):\n",
     "    \"\"\"Convert CIGALE output SED to final VO format\n",
     "    \n",
     "    Parameters\n",
@@ -103,31 +151,69 @@
     "    in_sed_name: string\n",
     "        Link to input SED fits file containg astropy Table\n",
     "        \n",
+    "    out_folder: string\n",
+    "        Folder to write outputs to\n",
+    "        \n",
+    "    ob_name: string\n",
+    "        Name of object \n",
+    "        \n",
+    "    ra: float\n",
+    "        Right Ascension [deg]\n",
+    "        \n",
+    "    dec: float\n",
+    "        Declination [deg]\n",
+    "        \n",
+    "    z: float\n",
+    "        Redshift\n",
+    "        \n",
     "    Returns\n",
     "    -------\n",
     "    out_sed_name: string\n",
     "        Link to output SED fits file that was written during function run.\n",
     "    \"\"\"\n",
-    "    in_sed = Table.read(in_sed_name)\n",
-    "    out_sed_name = out_folder + in_sed_name.split('/')[-1]\n",
+    "    try:\n",
+    "        in_sed = Table.read(in_sed_name)\n",
+    "        \n",
+    "        z = in_sed.meta['universe.redshift']\n",
+    "        help_id = in_sed_name.split('/')[-1].strip('_best_model.fits')\n",
+    "        ra,dec = name_to_ra_dec(help_id)\n",
+    "        \n",
+    "        out_sed_name = out_folder + in_sed_name.split('/')[-1]\n",
     "    \n",
-    "    out_sed = Table()\n",
+    "        out_sed = Table()\n",
     "    \n",
-    "    out_sed.add_column(Column(data = in_sed['wavelength'], \n",
+    "        out_sed.add_column(Column(data = in_sed['wavelength'], \n",
     "                                name = 'WAVE'))\n",
-    "    out_sed.add_column(Column(data = in_sed['Fnu'], \n",
+    "        out_sed.add_column(Column(data = in_sed['Fnu'], \n",
     "                                name = 'FLUX'))\n",
-    "    out_sed.add_column(Column(data = in_sed['L_lambda_total'], \n",
+    "        out_sed.add_column(Column(data = in_sed['L_lambda_total'], \n",
     "                                name = 'LUMIN'))\n",
-    "    out_sed.add_column(Column(data = in_sed['stellar.old'] + in_sed['stellar.young'], \n",
+    "        out_sed.add_column(Column(data = in_sed['stellar.old'] + in_sed['stellar.young'], \n",
     "                                name = 'STELLAR'))\n",
-    "    out_sed.add_column(Column(data = in_sed['dust.Umin_Umin'] + in_sed['dust.Umin_Umax'], \n",
+    "        out_sed.add_column(Column(data = in_sed['dust.Umin_Umin'] + in_sed['dust.Umin_Umax'], \n",
     "                                name = 'DUST'))\n",
-    "    out_sed.add_column(Column(data = in_sed['agn.fritz2006_therm'] + in_sed['agn.fritz2006_scatt'] + in_sed['agn.fritz2006_agn'], \n",
+    "        out_sed.add_column(Column(data = in_sed['agn.fritz2006_therm'] + in_sed['agn.fritz2006_scatt'] + in_sed['agn.fritz2006_agn'], \n",
     "                                name = 'AGN'))\n",
-    "    out_sed.add_column(Column(data = in_sed['igm'], \n",
+    "        out_sed.add_column(Column(data = in_sed['igm'], \n",
     "                                name = 'IGM'))\n",
-    "    out_sed.write(out_sed_name, overwrite=True)\n",
+    "        \n",
+    "    \n",
+    "        #Add header\n",
+    "\n",
+    "        out_sed.meta['VOCLASS'] = 'SPECTRUM 1.0'\n",
+    "        out_sed.meta['RADECSYS'] = 'ICRS'\n",
+    "        out_sed.meta['EQUINOX'] = 2000.0\n",
+    "        out_sed.meta['VOPUB'] = 'Herschel Extragalactic Legacy Programme'\n",
+    "        out_sed.meta['OBJECT'] = help_id\n",
+    "        out_sed.meta['REDSHIFT'] = z\n",
+    "        out_sed.meta['RA_TARG'] = ra\n",
+    "        out_sed.meta['DEC_TARG'] = dec\n",
+    "        out_sed.meta['TITLE'] = '{} CIGALE spectrum'.format(help_id)\n",
+    "        out_sed.write(out_sed_name, overwrite=True)\n",
+    "    except FileNotFoundError:\n",
+    "        return 'No file found!' \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    #Also try to copy the png\n",
     "    try:\n",
@@ -143,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -163,28 +249,28 @@
      "text": [
       "dmu_products/dmu28/dmu28_COSMOS/data/zphot/final_results.fits\n",
       "../dmu28/dmu28_COSMOS/data/zphot/SEDs/fits/\n",
-      "[]\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_ELAIS-S1/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_ELAIS-S1/data/zphot/SEDs/fits/\n",
-      "[]\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_GAMA-09/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_GAMA-09/data/zphot/SEDs/fits/\n",
-      "[]\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_Lockman-SWIRE/data/zphot/best_extcor/HELP_final_results.fits\n",
       "../dmu28/dmu28_Lockman-SWIRE/data/zphot/best_extcor/SEDs/fits/\n",
-      "[]\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_GAMA-12/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_GAMA-12/data/zphot/SEDs/fits/\n",
-      "[]\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_GAMA-15/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_GAMA-15/data/zphot/SEDs/fits/\n",
-      "[]\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_CDFS-SWIRE/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_CDFS-SWIRE/data/zphot/SEDs/fits/\n",
-      "[]\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_ELAIS-N1/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/\n",
-      "['../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155700.645+544930.666_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155659.535+544748.704_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155645.430+544835.225_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155659.261+550011.369_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155659.468+545217.840_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155659.062+545715.698_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155659.440+550018.719_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155647.331+550054.897_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155651.625+545843.028_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155643.789+545434.542_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155700.909+550039.328_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155635.416+545104.554_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155645.249+550054.367_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155657.720+545649.854_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155700.744+550117.430_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155647.710+545045.424_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155631.108+545024.379_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155658.920+545332.279_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155644.449+545428.304_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155634.050+545728.087_best_model.fits', '../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/HELP_J155700.730+545700.665_best_model.fits']\n"
+      "There are 21 SEDs here\n"
      ]
     }
    ],
@@ -203,17 +289,30 @@
     "            os.mkdir(out_folder.format(field))\n",
     "        except FileExistsError:\n",
     "            pass\n",
+    "        except FileNotFoundError:\n",
+    "            continue\n",
     "        \n",
     "        sed_folder = re.sub('/*final_results.fits', '/SEDs/fits/', cigale)\n",
     "        sed_folder = re.sub('dmu_products', '..', sed_folder)\n",
     "        sed_folder = re.sub('/HELP_', '', sed_folder)\n",
     "        print(sed_folder)\n",
+    "        \n",
     "        all_seds = glob.glob(sed_folder + '*.fits')\n",
-    "        print(all_seds)\n",
+    "        print(\"There are {} SEDs here\".format(len(all_seds)))\n",
     "        for in_sed_name in all_seds:\n",
     "            cigale_to_vo(in_sed_name, out_folder.format(field))\n",
+    "\n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
