Correct cross-matching radius phrase

--- a/dmu1/dmu1_ml_XMM-LSS/2.1_CFHT_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.1_CFHT_merge.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "We first merge the optical catalogues and then add the infrared ones. We start with PanSTARRS because it coevrs the whole field.\n",
     "\n",
-    "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
+    "At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius."
    ]
   },
   {
