--- a/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "We merge in order of increasing wavelength: VIDEO, VHS, VOICE, SERVS, SWIRE.\n",
     "\n",
-    "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
+    "At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius."
    ]
   },
   {
