--- a/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "We first merge the optical catalogues and then add the infrared ones: CFHTLenS, CFHTLS, DECaLS, HSC, KIDS, PanSTARRS, UKIDSS-LAS, VISTA-VHS, and VISTA-VIKING.\n",
     "\n",
-    "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
+    "At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius."
    ]
   },
   {
