--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_DECAM_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_DECAM_merging.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "We first merge DES and DECaLS.\n",
     "\n",
-    "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
+    "At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius."
    ]
   },
   {
