--- a/dmu1/dmu1_ml_SSDF/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SSDF/2_Merging.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "## II - Merging tables\n",
     "\n",
-    "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
+    "At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius."
    ]
   },
   {
