--- a/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "We merge UHS and Legacy Survey.\n",
     "\n",
-    "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
+    "At every step, we look at the distribution of the distances separating the sources from one catalogue to the other (within a maximum radius) to determine the best cross-matching radius."
    ]
   },
   {
