Replace plus with p in seds

--- a/dmu32/dmu32_seds_to_vo.ipynb
+++ b/dmu32/dmu32_seds_to_vo.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
     "    dec: float\n",
     "        Declination in degrees\n",
     "    \"\"\"\n",
-    "    ra, dec = 'HELP_J155631.108+545024.379'.strip('HELP_J').split('+')\n",
+    "    ra, dec = help_id.strip('HELP_J').split('+')\n",
     "    \n",
     "    ra = ra[:2] + 'h' + ra[2:]\n",
     "    ra = ra[:5] + 'm' + ra[5:]\n",
@@ -179,6 +179,7 @@
     "        ra,dec = name_to_ra_dec(help_id)\n",
     "        \n",
     "        out_sed_name = out_folder + in_sed_name.split('/')[-1]\n",
+    "        out_sed_name.replace('+', 'p')\n",
     "    \n",
     "        out_sed = Table()\n",
     "    \n",
