Bug fix in id to ra dec function

--- a/dmu32/dmu32_seds_to_vo.ipynb
+++ b/dmu32/dmu32_seds_to_vo.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,12 @@
     "    dec: float\n",
     "        Declination in degrees\n",
     "    \"\"\"\n",
-    "    ra, dec = help_id.strip('HELP_J').split('+')\n",
+    "    if '-' in help_id:\n",
+    "        ra, dec = help_id.strip('HELP_J').split('-')\n",
+    "        dec = '-' + dec\n",
+    "    if '+' in help_id:\n",
+    "        ra, dec = help_id.strip('HELP_J').split('+')\n",
+    "        dec = '+' + dec\n",
     "    \n",
     "    ra = ra[:2] + 'h' + ra[2:]\n",
     "    ra = ra[:5] + 'm' + ra[5:]\n",
@@ -126,11 +131,11 @@
     "    \n",
     "    \n",
     "    \n",
-    "    dec = dec[:2] + 'd' + dec[2:]\n",
-    "    dec = dec[:5] + 'm' + dec[5:]\n",
+    "    dec = dec[:3] + 'd' + dec[3:]\n",
+    "    dec = dec[:6] + 'm' + dec[6:]\n",
     "    dec = dec + 's'\n",
     "    \n",
-    "    coords = SkyCoord('{} +{}'.format(ra, dec))\n",
+    "    coords = SkyCoord('{} {}'.format(ra, dec))\n",
     "    \n",
     "    return coords.ra.value, coords.dec.value"
    ]
