bug fix on final make seds

--- a/dmu32/dmu32_seds_to_vo.ipynb
+++ b/dmu32/dmu32_seds_to_vo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-07-09 17:58:08.576610\n"
+      "2018-07-11 18:16:00.119087\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -184,8 +184,8 @@
     "        ra,dec = name_to_ra_dec(help_id)\n",
     "        \n",
     "        out_sed_name = out_folder + in_sed_name.split('/')[-1]\n",
-    "        out_sed_name.replace('+', 'p')\n",
-    "    \n",
+    "        out_sed_name=out_sed_name.replace('+', 'p')\n",
+    "        #print(out_sed_name)\n",
     "        out_sed = Table()\n",
     "    \n",
     "        out_sed.add_column(Column(data = in_sed['wavelength'], \n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -271,12 +271,36 @@
       "dmu_products/dmu28/dmu28_GAMA-15/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_GAMA-15/data/zphot/SEDs/fits/\n",
       "There are 0 SEDs here\n",
+      "dmu_products/dmu28/dmu28_SGP/data/zphot/HELP_final_results.fits\n",
+      "../dmu28/dmu28_SGP/data/zphot/SEDs/fits/\n",
+      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_CDFS-SWIRE/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_CDFS-SWIRE/data/zphot/SEDs/fits/\n",
       "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_ELAIS-N1/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/\n",
-      "There are 21 SEDs here\n"
+      "There are 21 SEDs here\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.645p544930.666_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.535p544748.704_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155645.430p544835.225_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.261p550011.369_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.468p545217.840_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.062p545715.698_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.440p550018.719_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155647.331p550054.897_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155651.625p545843.028_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155643.789p545434.542_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.909p550039.328_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155635.416p545104.554_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155645.249p550054.367_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155657.720p545649.854_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.744p550117.430_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155647.710p545045.424_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155631.108p545024.379_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155658.920p545332.279_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155644.449p545428.304_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155634.050p545728.087_best_model.fits\n",
+      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.730p545700.665_best_model.fits\n"
      ]
     }
    ],
@@ -310,15 +334,6 @@
     "\n",
     "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
